--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0"
+        "laravelcollective/html": "^5.4.0",
+        "santigarcor/laratrust": "5.0.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -23,7 +24,8 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files" : ["app/Helpers/permissions.php"]
     },
     "autoload-dev": {
         "psr-4": {
