--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "barryvdh/laravel-debugbar": "~2.4",
         "graham-campbell/markdown": "^9.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
